--- a/pom.xml
+++ b/pom.xml
@@ -165,17 +165,18 @@
 			</properties>
 		</profile>
 	</profiles>
-	  <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.12.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
+	<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>latest_version</version>
+           
+        </plugin>
     </plugins>
+</build>
+ion>
+    <scope>provided</scope>
  
 
 </project>
