--- a/.github/workflows/master_lordfreakin10.yml
+++ b/.github/workflows/master_lordfreakin10.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy WAR app to Azure Web App - lordfreakin10
+name: Build and deploy JAR app to Azure Web App - lordfreakin10
 
 on:
   push:
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Java version
         uses: actions/setup-java@v1
         with:
-          java-version: '17'
+          java-version: '8'
 
       - name: Build with Maven
         run: mvn clean install
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
     runs-on: windows-latest
@@ -48,9 +48,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E2EEF9CFDBBA48BD9E04735755CAE100 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_416646D0DD1A41EF8EB8BCAC320BE64C }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F44F66BD129B4EDCB37CA8195347B7AC }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C61BACDE38954C96A981E6FD9A0AB6B8 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_EB22021A0F18455F9F8B872E6191DB3B }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7BC4FB6C202D412BBB91153B6F60E873 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -58,5 +58,5 @@ jobs:
         with:
           app-name: 'lordfreakin10'
           slot-name: 'Production'
-          package: '*.war'
+          package: '*.jar'
           
